# ar-nids

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
deploy/: Dockerfile  deployment.yaml
src/ar_nids/: __init__.py  adversarial.py  cli.py  config.py  data.py  drift.py  explainability.py  feature_engineering.py  model.py  pipeline.py  serving.py
tests/: test_config.py  test_drift.py  test_feature_engineering.py
